# grok-code

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
.grok/: GROK.md
grok_code/: __init__.py  __main__.py  client.py  conversation.py  main.py  permissions.py
grok_code/agents/: __init__.py  base.py  explore.py  general.py  plan.py  plugin_agent.py  runner.py
grok_code/plugins/: __init__.py  loader.py  registry.py
grok_code/tools/: __init__.py  agents.py  approve.py  base.py  bash.py  file_ops.py  glob_grep.py  plan_mode.py  registry.py  semantic.py  tasks.py  test_ops.py  tree_edit.py  web.py
grok_code/ui/: __init__.py  agents.py  chat_layout.py  console.py  diff.py  display.py  images.py  input.py  status.py
tests/: test_client.py  test_tools.py
