[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grok-code"
version = "0.2.0"
description = "A CLI coding assistant powered by Grok (xAI)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "grokCode"}
]
keywords = ["cli", "ai", "grok", "xai", "coding", "assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx==0.28.1",
    "rich==14.3.1",
    "prompt-toolkit==3.0.52",
    "python-dotenv==1.2.1",
    "pygments==2.19.2",
]

[project.scripts]
grok = "grok_code.main:main"

[project.optional-dependencies]
dev = [
    "black==24.4.2",
    "pytest-cov==5.0.0",
    "pytest==8.3.2",
    "ruff==0.6.1",
    "libcst>=1.3.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "sentence-transformers>=3.1.0",
    "networkx>=3.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["grok_code*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
addopts = [
    "-v",
    "--cov=grok_code",
    "--cov-report=term-missing",
    "--cov-report=html",
]